--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,18 @@
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
 
+  <dependencyManagement>
+  <dependencies>
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>libraries-bom</artifactId>
+      <version>26.0.0</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+  </dependencies>
+</dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -26,10 +38,9 @@
       <scope>test</scope>
     </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.http-client/google-http-client -->
-    <dependency>
-        <groupId>com.google.http-client</groupId>
-        <artifactId>google-http-client</artifactId>
-        <version>1.42.2</version>
+      <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-storage</artifactId>
     </dependency>
   </dependencies>
 
