--- a/logging.properties
+++ b/logging.properties
@@ -1,5 +1,5 @@
 handlers = java.util.logging.ConsoleHandler
-java.util.logging.ConsoleHandler.level = CONFIG
+java.util.logging.ConsoleHandler.level = ALL
 
 # Set up logging of HTTP requests and responses (uncomment "level" to show)
 com.google.api.client.http.level = ALL
